--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -1,9 +1,27 @@
 :root {
-  --font-quran: 'Amiri Quran', serif;
-  --font-ui: 'Sansation', system-ui, sans-serif;
+  --font-quran: "Amiri Quran", serif;
+  --font-ui: "Sansation", system-ui, sans-serif;
 }
 
 /* Default UI font */
+/* Amiri Quran */
+@font-face {
+  font-family: "Amiri Quran";
+  src: url("~/assets/fonts/AmiriQuran-Regular.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+/* Sansation */
+@font-face {
+  font-family: "Sansation";
+  src: url("~/assets/fonts/Sansation-Regular.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
 html,
 body {
   font-family: var(--font-ui);
